syntax = "proto3";

package worker.cluster.v1;

import "google/protobuf/empty.proto";
option go_package = "github.com/10Narratives/distgo-db/pkg/proto/worker/cluster/v1;wclusterv1";

service ClusterService {
    rpc ForgetConnection (ForgetConnectionRequest) returns (google.protobuf.Empty);
}

message ForgetConnectionRequest {}